src/test/ui/cenum_impl_drop_cast.stderr
error: Cast `enum` implementing `Drop` `E` to integer `u32`
  --> $DIR/cenum_impl_drop_cast.rs:15:13
   |
LL |     let i = e as u32;
   |             ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/cenum_impl_drop_cast.rs:1:9
   |
LL | #![deny(cenum_impl_drop_cast)]
   |         ^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #73333 <https://github.com/rust-lang/rust/issues/73333>

error: aborting due to previous error

